deploy/base/loadtest.yaml
##################################################################################################
# Load test
##################################################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadtest
  labels:
    app: loadtest
spec:
  replicas: 10
  selector:
    matchLabels:
      app: loadtest
  template:
    metadata:
      labels:
        app: loadtest
    spec:
      containers:
      - name: loadtest
        image: docker.io/jordi/ab
        command: ["ab"]
        args: ["-c", "500", "-n", "1000000", "http://service-a:8080/api/v1/tasks/"]
