deploy/base/book-inventory.yaml
##################################################################################################
# My Service A
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
    role: backend
    service: service-b
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
    role: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        role: backend
    spec:
      containers:
      - name: service-b
        image: image-registry.openshift-image-registry.svc:5000/my-first-openshift-common/service-b:master
        ports:
        - containerPort: 8080
      serviceAccountName: privileged-app
