deploy/base/mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - name: mongo
    nodePort: 0
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: mongo
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
    role: db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
        role: db
    spec:
      containers:
      - name: mongo
        image: docker.io/mongo:5.0.2
        ports:
        - containerPort: 27017
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /data/db
          name: mongo-data
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
      serviceAccountName: privileged-app
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo
