deploy/base/service-a.yaml
##################################################################################################
# My Service A
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    service: service-a
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: image-registry.openshift-image-registry.svc:5000/my-first-openshift-common/service-a:master
        ports:
        - containerPort: 8080
      serviceAccountName: privileged-app
