deploy/base/web.yaml
##################################################################################################
# Web
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    service: web
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      serviceAccountName: privileged-app
