deploy/base/lb.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: lb-api
  labels:
    app: book-inventory
    service: book-inventory
spec:
  to:
    kind: Service
    name: book-inventory
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: lb-api-b
  labels:
    app: book-review
    service: book-review
spec:
  to:
    kind: Service
    name: book-review
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
